--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-light navbar-expand-lg">
-            <img src="images/Screenshot 2024-01-25 185526.png" class="navbar-brand w-25">
+            <img src="images/Screenshot 2024-01-25 185526.png" class="navbar-brand" width="200px">
             <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,6 +38,28 @@
         <div class="col-md-6 col-12 d-flex justify-content-center pt-5 pb-5">
                <img src="images/Screenshot 2024-01-25 184647.png" alt="Image" style="height: 700px;">
         </div>
+    </div>
+
+    <div class="py-5 d-flex justify-content-center flex-column align-items-center mb-2">
+         <img src="images/Screenshot 2024-01-25 185526.png" width="200px">
+         <div class="row">
+         <ul class="navbar-nav ms-auto gap-md-5 gap-3 d-flex flex-row justify-content-center mb-4 mt-4">
+            <li class="nav-item"><a href="#" class="nav-link text-black">Landings</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-black">Pages</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-black">Account</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-black">UI Kit</a></li>
+            <li class="nav-item"><a href="#" class="nav-link text-black">Docs</a></li>
+        </ul>
+    </div>
+
+    <div class="row">
+        <div class="d-flex justify-content-center align-items-center mt-3"> 
+            <img src="images/apple-app-store-logo.jpg" alt="App Store" width="160" class="me-2">
+            <img src="images/play-store-logo-nisi-filters-australia-11.png" alt="Play Store" width="180" height="78">
+        </div>
+    </div>
+         
+
     </div>
 </div>
 </body>
